# 2DGameEngine

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
src/ECS/: Components.hpp  EntityManager.hpp
src/ECS/Systems/: RenderSystem.hpp
tests/: CMakeLists.txt  test_entity_manager.cpp
